@@ -125,7 +125,7 @@ schema = Schema((
         widget=RichWidget(
             label="Details",
             description="Please provide further details",
-            rows="15",
+            rows=15,
             allow_file_upload=False,
             label_msgid='Poi_label_details',
             description_msgid='Poi_help_details',
@@ -143,7 +143,7 @@ schema = Schema((
         widget=RichWidget(
             label="Steps to reproduce",
             description="If applicable, please provide the steps to reproduce the error or identify the issue, one per line.",
-            rows="6",
+            rows=6,
             allow_file_upload=False,
             label_msgid='Poi_label_steps',
             description_msgid='Poi_help_steps',
