@@ -96,7 +96,7 @@ schema = Schema((
         widget=RichWidget(
             label="Response",
             description="Please enter your response below",
-            rows="15",
+            rows=15,
             allow_file_upload=False,
             label_msgid='Poi_label_response',
             description_msgid='Poi_help_response',
