@@ -5,6 +5,11 @@ Changelog for Poi
 1.2rc4 (unreleased)
 -------------------
 
+- Fixed possible in rich text field widget by now giving the number of
+  rows as an integer instead of a string.
+  Fixes http://plone.org/products/poi/issues/203
+  [maurits]
+
 - Migrations: now doing intermediate transaction commits to give the
   migrations a chance to finish on big sites.  [maurits]
 
